# vms-v2

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  AUTORIA.md  COMANDOS_CORRETOS.md  COMMIT_MESSAGE.txt  DEV_GUIDE.md  DOCKER_BUILD_TROUBLESHOOTING.md  DOCKER_COMPOSE_GUIDE.md  DOCKER_QUICKSTART.md  DOCKER_TEST.md  DOCKER_TESTS.md  INSTALL_PYTHON312.md  LICENSE  PROTECAO_LEGAL.md  README.md  conftest.py  deploy.sh  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  fix_imports.py  fix_shared.py  manage.py  mediamtx.yml  mypy.ini  pyproject.toml  pytest.ini  run_fastapi.py
.context/: CURRENT_STATE.md  PROJECT_CONTEXT.md  QUICK_PROMPT.md  README.md
LGPD/: 01-principios-lgpd.md  02-dados-pessoais.md  03-direitos-titulares.md  04-base-legal.md  05-consentimento.md  06-seguranca.md  07-anonimizacao.md  08-incidentes.md  09-auditoria.md  10-checklist.md  README.md
deprecated-compose/: README.md  docker-compose.dev.yml.disabled  docker-compose.test.yml.disabled
docker/: README.md
docs/: DOCKER_STRUCTURE.md  FRONTEND_REFACTOR.md  FRONTEND_SPEC.md  TESTING_GUIDE.md  player-example.html
frontend/: .dockerignore  .env.example  Dockerfile  INTEGRATION_GUIDE.md  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
haproxy/: haproxy.cfg  haproxy.prod.cfg  haproxy.simple.cfg
kong/: kong.prod.yml  kong.simple.yml  kong.yml
monitoring/: alertmanager.yml  logstash.conf  prometheus.yml
scripts/: README_TESTS.md  check-services.bat  cleanup.bat  commit-today.bat  docker-build.bat  docker-clean-restart.bat  docker-test-e2e.bat  fix_corrupted_files.py  gerar-evidencias.bat  init_minio.py  install-python312.bat  install-python312.ps1  lint.bat  restart-services.bat  setup.bat  simulate_camera_detection.py  sprint11-setup.bat  start-all-services.bat  start-and-test.bat  start-dev.bat  start-elk.bat  start-fastapi.bat  start-full-stack.bat  start-infra.bat  start-test.bat  stop-infra.bat  test-auth.bat  test-e2e.bat  test-real-cameras.bat  test-sprint13-docker.bat  test-sprint13.bat  test-streaming.bat  test.bat  test_direct_mediamtx.py  test_docker_e2e.py  test_ffmpeg_direct.py  test_real_cameras.py  test_streaming_e2e.py  validate-stack.bat  validate.bat
sprints/: PROJECT_SUMMARY.md  README.md  SESSION_SUMMARY.md  SPRINT_11_COMMANDS.md  SPRINT_11_COMPLETE.md  SPRINT_11_FIX.md  SPRINT_11_INDEX.md  SPRINT_11_MEDIAMTX_FIX.md  SPRINT_12_QUICKSTART.md  SPRINT_4_5_SUMMARY.md  SPRINT_5_COMPLETE.md  sprint-0.md  sprint-1-report.md  sprint-1-validation.md  sprint-1.md  sprint-11-architecture.md  sprint-11-checklist.md  sprint-11-integration-guide.md  sprint-11-phase1-summary.md  sprint-11-quickstart.md  sprint-11.md  sprint-12-complete.md  sprint-12-observability-guide.md  sprint-12-phase1-complete.md  sprint-12-phase2-complete.md  sprint-12-phase3-complete.md  sprint-12-phase4-complete.md  sprint-13-complete.md  sprint-13-fase-1-complete.md  sprint-13-fase-2-complete.md  sprint-13-fase-4-complete.md  sprint-13-fase-4-elk-complete.md  sprint-13-fase-5-elk.md  (+21 more)
(+404 files in other folders)
