[tool.poetry]
name = "gt-vision-vms"
version = "0.1.0"
description = "Sistema VMS Enterprise para Prefeituras"
authors = ["GT-Vision Team"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
# Django (Admin + Cidades)
django = "^5.0"
djangorestframework = "^3.14"
djangorestframework-simplejwt = "^5.3"
django-cors-headers = "^4.3"
django-filter = "^23.5"
# FastAPI (Streaming + AI)
fastapi = "^0.109"
uvicorn = {extras = ["standard"], version = "^0.27"}
# Database
psycopg2-binary = "^2.9"
sqlalchemy = "^2.0"
asyncpg = "^0.29"
alembic = "^1.13"
# Cache & Message Broker
redis = "^5.0"
celery = "^5.3"
pika = "^1.3"
aio-pika = "^9.3"
# Validation & Serialization
pydantic = "^2.5"
pydantic-settings = "^2.1"
# HTTP Client
httpx = "^0.26"
# Video Processing
ffmpeg-python = "^0.2"
# Storage (S3/MinIO)
boto3 = "^1.34"
minio = "^7.2"
# WebSockets
websockets = "^12.0"
# Utils
python-decouple = "^3.8"
python-dateutil = "^2.8"
pytz = "^2024.1"
# Observability
prometheus-client = "^0.19"
# Security
python-jose = {extras = ["cryptography"], version = "^3.3"}
passlib = {extras = ["bcrypt"], version = "^1.7"}
slowapi = "^0.1"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^7.4"
pytest-cov = "^4.1"
pytest-asyncio = "^0.23"
pytest-django = "^4.7"
pytest-mock = "^3.12"
faker = "^22.0"
# Code Quality
black = "^24.1"
flake8 = "^7.0"
mypy = "^1.8"
isort = "^5.13"
bandit = "^1.7"
# Pre-commit
pre-commit = "^3.6"
# Mutation Testing
mutmut = "^2.4"
# Load Testing
locust = "^2.20"
# Type Stubs
types-redis = "^4.6"
types-python-dateutil = "^2.8"
django-stubs = "^4.2"
djangorestframework-stubs = "^3.14"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | venv
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_glob = ["*/migrations/*", "venv/*", ".venv/*"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy", "mypy_django_plugin.main"]
exclude = ["migrations", "venv", ".venv"]

[[tool.mypy.overrides]]
module = "celery.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pika.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "ffmpeg.*"
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "admin.infrastructure.web.django_app.settings"

[tool.pytest.ini_options]
python_files = ["tests.py", "test_*.py", "*_tests.py"]
testpaths = ["src"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
]
addopts = [
    "--strict-markers",
    "--tb=short",
]

[tool.coverage.run]
omit = ["*/tests/*", "*/migrations/*", "*/__pycache__/*"]

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
